# mytokes

./: .env.example  .gitignore  3333.md  CLAUDE.md  CONTEXT_ENHANCEMENT.md  DEPLOYMENT_CHECKLIST.md  FEATURE_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  KIRO_TOOL_CALL_FIX.md  QUICK_REFERENCE.md  QUICK_START_CONTEXT.md  README.md  README_KIRO_FIX.md  SOLUTION_SUMMARY.md  ai-history-manager.service  api_server copy 2.py  api_server copy.py  api_server.py  api_server.py.backup.20260130_042136  api_server.py.part_parse_tool  api_server_grok.py  api_server_grok_anthropic.py  api_server_ys.py  baocuo.md  baocuo2.md  hallucination_detection.py  kiro_converter.py  message_optimizer.py  monitor.sh  new.md  pyproject.toml  requirements.txt  run.py  shuoming.md  shuoming2.md  start.sh  start_grok_anthropic.sh  (+11 more)
.ccjk/docs/: smart-summary-analysis.md
.ccjk/plan/current/: improperly-formed-request-analysis.md  opus-首字延迟优化.md  tools-text-injection-backup.md  优化完成总结.md  修复Claude-Code-CLI报错问题.md  多终端会话隔离.md  模型路由优化-降低Opus使用率.md
.claude/: settings.json
.claude/agents/: api-design.md  architect.md  code-review.md  docs.md  performance.md  refactor.md  security.md  testing.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  admin.py  anthropic.py  base.py  chat_completions.py  health.py  messages.py  models.py  openai.py
app/core/: config.py  constants.py  router.py
app/middleware/: __init__.py  error_handler.py  rate_limiter.py  request_context.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  context.py  continuation.py  converter.py  http_client.py  managers.py  model_router.py  streaming.py
app/utils/: __init__.py  cache.py  exceptions.py  helpers.py  json_parser.py  logging.py  token_utils.py  tool_parser.py
config/: history.yaml
src/ai_history_manager/: __init__.py  manager.py
src/ai_history_manager/adapters/: __init__.py  kiro.py
src/ai_history_manager/cache/: __init__.py  (+1 more)
tests/: test_cache.py  test_config.py  test_manager.py
(+7 files in other folders)
